# Finam

./: README.md  system prompt
services/api/: pyproject.toml
services/api/src/api/: __main__.py  scoring.py  service.py
services/api/src/radar_api/: main.py  scoring.py  service.py
services/radar_parser/: README.md  llm_async_adapter.py  pipeline.py  pyproject.toml
services/radar_parser/config/: sources.csv
services/radar_parser/scripts/: run_pipeline.sh
services/radar_parser/src/: __main__.py
services/radar_parser/src/app/: config.py
services/radar_parser/src/app/fetch/: rssbridge.py
services/radar_parser/src/app/filter/: time_filter.py
services/radar_parser/src/app/parsers/: generic_parser.py
services/radar_parser/src/radar_parser/: __main__.py
services/radar_parser/src/radar_parser/app/: config.py
services/radar_parser/src/radar_parser/app/dedup/: dedup.py
services/radar_parser/src/radar_parser/app/fetch/: html_fetcher.py  rss_direct.py  rssbridge.py
services/radar_parser/src/radar_parser/app/filter/: time_filter.py
services/radar_parser/src/radar_parser/app/parsers/: atom_parser.py  generic_parser.py  listing_fetch.py  site_parsers.py
services/rss_bridge/: docker-compose.yml
services/rss_bridge/config/: config.ini.php
