[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar_parser"
version = "0.0.0"
description = "RADAR parser"
authors = [{ name = "lemon girls" }]
dependencies = [
    "requests>=2.32.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
